--- a/_config.yml
+++ b/_config.yml
@@ -1,28 +1,28 @@
 # Site wide configuration
 
-title: "Your Awesome Site"
-description: "A Coming Soon Template"
+title: "Navneet's Site"
+description: "Coming Soon!"
 #if you modify locale please have a look at _data/messages.yml too
 locale: en
 #for meta name="author" :
-author: 
+author: Navneet
 
 #Target date in UTC / GMT
 countdown:
   theme: red
-  year: 2020
-  month: 1
+  year: 2019
+  month: 5
   day: 1
-  hour: 0
+  hour: 10
   minute: 0
 
 # Site owner
 owner:
-  name:
-  email:
-  twitter:
-  google-plus:
-  instagramm:
+  name: Navneet
+  email: hello@ddraffft.in
+  twitter: N/A
+  google-plus: n/A
+  instagramm: nav.kris
   #Aboutlink = German "Impressum", provide url and caption (eg "Impressum")
   aboutlink:
     url:
