--- a/_config.yml
+++ b/_config.yml
@@ -19,9 +19,9 @@ countdown:
 # Site owner
 owner:
   name: Navneet
-  email: hello@ddraffft.in
-  twitter: N/A
-  google-plus: n/A
+  email: hello+navneet@ddraffft.in
+  twitter: clickme_exe
+  google-plus:
   instagramm: nav.kris
   #Aboutlink = German "Impressum", provide url and caption (eg "Impressum")
   aboutlink:
